--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.3.2",
+    "redis": "^4.6.13",
     "winston": "^3.13.0"
   }
 }
